# hf-freeze

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: compatibility.md
examples/tiny-random-bert/: app.py
scripts/: validate_slice18.py
src/hf_freeze/: __init__.py  check.py  cli.py  config.py  diff.py  hub.py  lockfile.py  models.py  rewrite.py  scan.py
tests/: test_check.py  test_cli.py  test_config.py  test_diff.py  test_hub.py  test_lifecycle.py  test_lock.py  test_lockfile.py  test_rewrite.py  test_scan.py  test_slice18_validation.py
tests/fixtures/scan_project/: app.py
validation/slice18/: manifest.json  results.json
validation/slice18/overlays/: alpaca-lora.patch  cloneofsimo-lora.patch  docker-model-runner.patch  emotion-space.patch  medgemma-space.patch  peft.patch  sentiment-api.patch  streamlit-chatbot.patch  tall-masks.patch  transformers-bloom-inference.patch  tsdae.patch
