[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[project]
name = "hf-freeze"
version = "0.1.0"
description = "Freeze Hugging Face Hub dependencies with deterministic lockfiles."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
urls = { Repository = "https://github.com/DBordeleau/hf-freeze", Issues = "https://github.com/DBordeleau/hf-freeze/issues" }
dependencies = [
    "huggingface_hub>=1.0,<2",
    "libcst>=1.8",
    "pathspec>=1.1,<2",
    "tomli>=2.2; python_version < '3.11'",
    "typer>=0.12",
]

[project.scripts]
hf-freeze = "hf_freeze.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
